# bot_tg_for_fast_access_to_gpt

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
bot/: __init__.py  util.py  webhook.py
bot/commands/: __init__.py  check_all_conversations.py  start.py  start_conversation.py
bot/markups/: all_conversations.py  main_menu.py  to_main_menu.py
services/: config.py  logs.py
services/bot/: cancel_current_chatting.py  filters_for_messages.py  webhook.py
services/bot/commands/: start_conversation.py
services/bot/markups/: all_conversations.py  generating_markups.py
services/constants/: buttons.py  commands.py  filters.py  markups.py  session_flags.py  texts.py
services/database/: db_models.py
services/database/models/: conversations.py  sessions.py
services/openai/: util.py
