[tool.poetry]
name = "bot-openai"
version = "0.1.0"
description = ""
authors = ["moonvent <terraboneystone@proton.me>"]
readme = "README.md"
packages = [{include = "bot_openai"}]

[tool.poetry.dependencies]
python = "3.10"
pytelegrambotapi = "^4.10.0"
cherrypy = "^18.8.0"
pyopenssl = "^23.1.0"
loguru = "^0.6.0"
openai = "^0.27.2"
debugpy = "^1.6.6"
python-dotenv = "^1.0.0"
peewee = "^3.16.0"
peewee-db-evolve = "^3.7.6"
cryptography = "^40.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
